# travel-planner

./: .gitignore  README.md  api.py  costs.csv  flake.nix  main.py  main_agent.py  package-lock.json  package.json  pyproject.toml  requirements.txt
agent/: agent.py
agent/utils/: amadeus.py  gemini.py  monitoring.py  tools.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  TravelPlannerApp.jsx
frontend/src/component/: ChatInput.jsx  DevMode.jsx  Evaluation.jsx  Header.jsx  Message.jsx  QuickActions.jsx  TripDetails.jsx
frontend/src/component/chat/: ChatInput.jsx  Message.jsx  ModeIndicators.jsx  OptionMenu.jsx  ProcessingSteps.jsx
frontend/src/component/common/: CurrencySelector.jsx
frontend/src/component/details/: ActivitiesBlock.jsx  BudgetBlock.jsx  (+7 more)
frontend/src/context/: CurrencyContext.jsx
frontend/src/utils/: formatPrice.js
notebook/: analysis.ipynb
src/: agent.py  graph.py
src/llm/: __init__.py  llm.py
src/nodes/: __init__.py  activity.py  city.py  compiler.py  flight.py  hotel.py  passenger.py  planner.py  reasoning.py
src/states/: __init__.py  activity.py  agent.py  flight.py  hotel.py  planner.py
src/tools/: __init__.py  date.py  exchange_rate.py  location.py  weather.py
src/tools/amadeus/: activity_search.py  auth.py  city_search.py  flight_search.py  hotel_search.py  place_detail.py
src/utils/: __init__.py  checkpoint_manager.py  monitoring.py  state_saver.py  token_usage.py  utils.py
tests/: evaluation_results.csv  evaluation_results_old.csv  judge.py  prompts.csv  prompts_old.csv  test_agent.py
